Manage Suppliers Search + Filter list API - functional